Update CORS configuration with SimpleCorsFilter and explicit configuration